# WB_parser

./: .gitignore  README.md  main.py  pyproject.toml  task.md
handlers/: answers.py
pars_wb/: __init__.py  configs.py  constants.py  exception.py  pars_page_index.py
